package com.codurance.training.tasks.actions;

public enum ActionStatus {
    QUIT, NONE;
}
